--- a/src/app/cases/start-case/start-case.component.scss
+++ b/src/app/cases/start-case/start-case.component.scss
@@ -7,7 +7,7 @@
   background: white;
 }
 .header-label {
-  color: #8c632e;
+  color: #003050;
 }
 .sticky-div {
   position: -webkit-sticky !important;
@@ -15,7 +15,22 @@
   background-color: white;
   overflow-x: hidden;
 }
-
+.demo-app-main {
+  flex-grow: 1;
+  padding: 2em;
+}
+.demo-app {
+  display: flex;
+  min-height: 100%;
+  font-size: 14px;
+}
+.demo-app-sidebar {
+  flex-grow: 1;
+  width: 240px;
+  line-height: 1.5;
+  background: #eaf9ff;
+  border-right: 1px solid #d3e2e8;
+}
 //#eaf9ff
 
 .mat-drawer {
@@ -27,7 +42,8 @@
 }
 
 .menubutton {
-  color: #8c632e;
+  color: #003050;
+  margin: top 16px;
 }
 .custom-marker {
   display: flex;
@@ -82,6 +98,22 @@
     justify-content: center;
     border-bottom: 0px !important;
   }
+  .p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
+    background: #ffffff;
+    border-color: rgba(0, 0, 0, 0.12);
+    color: #003050;
+  }
+  .p-tabview .p-tabview-nav-btn.p-link {
+    background: #ffffff;
+    color: #003050;
+    width: 2.75rem;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+      0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 0;
+  }
+  .p-tabview .p-tabview-nav .p-tabview-ink-bar {
+    background-color: #003050;
+  }
   .p-timeline-event-content {
     line-height: 1;
     padding-right: 4px !important;
@@ -95,17 +127,16 @@
     padding-top: 20px;
     padding-right: 8px;
   }
-
   .mat-list-item.mat-list-option.mat-focus-indicator {
     &:hover {
       .mat-list-text {
         color: #8c632e;
         opacity: 1;
-        -webkit-animation: moveFromLeft 800ms ease-in-out;
-        -moz-animation: moveFromLeft 800ms ease-in-out;
+        -webkit-animation: moveFromLeft 100ms ease-in-out;
+        -moz-animation: moveFromLeft 100ms ease-in-out;
         -ms-animation: moveFromLeft 800ms ease-in-out;
         -o-animation: moveFromLeft 800ms ease-in-out;
-        animation: moveFromLeft 800ms ease-in-out;
+        animation: moveFromLeft 500ms ease-in-out;
       }
     }
     &.mat-list-single-selected-option {
