--- a/src/app/cases/start-case/start-case.component.scss
+++ b/src/app/cases/start-case/start-case.component.scss
@@ -95,7 +95,7 @@
 }
 ::ng-deep {
   .p-tabview-nav {
-    justify-content: center;
+    // justify-content: center;
     border-bottom: 0px !important;
   }
   .p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
