--- a/src/app/cases/start-case/start-case.component.scss
+++ b/src/app/cases/start-case/start-case.component.scss
@@ -18,11 +18,13 @@
 .demo-app-main {
   flex-grow: 1;
   padding: 2em;
+  position: relative;
 }
 .demo-app {
   display: flex;
   min-height: 100%;
   font-size: 14px;
+  background: white;
 }
 .demo-app-sidebar {
   flex-grow: 1;
@@ -30,6 +32,11 @@
   line-height: 1.5;
   background: #eaf9ff;
   border-right: 1px solid #d3e2e8;
+}
+.btn-complete-stage {
+  position: absolute;
+  top: 28px;
+  right: 0;
 }
 //#eaf9ff
 
